lab3/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab3-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab3-frontend
  template:
    metadata:
      labels:
        app: lab3-frontend
    spec:
      containers:
      - name: lab3-frontend
        image: ifilyaninitmo/itdt-contained-frontend:master
        ports:
          - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: lab3-service
spec:
  selector:
    app: lab3-frontend
  ports:
    - port: 3000
      protocol: TCP
      name: http
  type: LoadBalancer
